--- a/YusupovHotel/YusupovHotel.csproj
+++ b/YusupovHotel/YusupovHotel.csproj
@@ -10,6 +10,11 @@
     <PackageReference Include="BlazorInputMask" Version="1.0.14" />
     <PackageReference Include="MongoDB.Bson" Version="2.19.1" />
     <PackageReference Include="MongoDB.Driver" Version="2.19.1" />
+    <PackageReference Include="MongoDB.Driver.GridFS" Version="2.19.1" />
     <PackageReference Include="Validation" Version="2.5.51" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\roomsImages\" />
   </ItemGroup>
 </Project>
