--- a/YusupovHotel/YusupovHotel.csproj
+++ b/YusupovHotel/YusupovHotel.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BlazorDateRangePicker" Version="4.3.0" />
     <PackageReference Include="BlazorInputFile" Version="0.2.0" />
     <PackageReference Include="BlazorInputMask" Version="1.0.14" />
     <PackageReference Include="MongoDB.Bson" Version="2.19.1" />
